--- a/index.html
+++ b/index.html
@@ -6,97 +6,7 @@
     <link rel="stylesheet" href="stylesheets/game.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>
-       function getRandomIntInclusive(min, max) {
-          min = Math.ceil(min);
-          max = Math.floor(max);
-          return Math.floor(Math.random() * (max - min + 1)) + min; //The maximum is inclusive and the minimum is inclusive
-        }
 
-        var randomWord = (function() {
-          var wordArray = ['stipend', 'glamor', 'pencil', 'arbiter'];
-
-          return function() {
-            var randomIdx = getRandomIntInclusive(0, wordArray.length - 1);
-            var result = wordArray[randomIdx];
-            wordArray.splice(randomIdx, 1);
-
-            return result;
-          }
-        })()
-
-      function findMatches(char) {
-        var regex = new RegExp(char, 'g');
-        var word = gameInstance.word;
-        var myArray;
-        var result = [];
-
-        trackKey(char)
-
-        while ((myArray = regex.exec(word)) !== null) {
-          result.push(regex.lastIndex - 1);
-        }
-
-        updateStatus(result.length);
-
-        return result;
-      }
-
-      function trackKey(key) {
-        gameInstance.lettersGuessed.push(key);
-        $guesses.append("<span>" + key + "</span");
-      }
-
-      function updateStatus(number) {
-        gameInstance.correct_spaces += number;
-      }
-
-      function handleResult(matches) {
-        var array = gameInstance.lettersGuessed;
-        var mostRecentChar = array[array.length - 1];
-
-        if (matches.length > 0) {
-          matches.forEach(function(idx){
-            $letters.find('span').get(idx).textContent = mostRecentChar;
-          })
-        } else {
-          handleMismatch();
-        }
-      }
-
-      function handleMismatch() {
-        gameInstance.incorrectGuesses++;
-        //apple function
-      }
-
-      function returnGameProgress() {
-        var win = (gameInstance.word.length === gameInstance.correct_spaces)? 'win' : null;
-        var lose = (gameInstance.incorrectGuesses === 6)? 'lose' : null;
-        var condition = (win || lose)
-
-        return condition;
-      }
-
-      function endGame(status) {
-        var message;
-        var condition;
-
-        if (status === 'win') {
-          message = 'congrats';
-        } else if (status === 'lose') {
-          message = 'lose';
-        }
-
-        $body.addClass(status);
-        $message.text(message);
-        unbindKeyPress(status);
-        $replay.toggle(!!status);
-      }
-
-      function unbindKeyPress(trigger) {
-        if (trigger) {
-          $(document).off('keypress');
-        }
-      }
     </script>
   </head>
   <body>
@@ -122,80 +32,182 @@
     var $letters = $('#spaces');
     var $guesses = $('#guesses');
     var $replay = $('#replay');
-    var $apples = $('#apples.guess_1');
+    var $apples = $('#apples');
     var $body = $('body');
 
-    var GameObject = function() {
-      this.word = randomWord();
-      this.incorrectGuesses = 0;
-      this.totalAllowedIncorrects = 6;
-      this.lettersGuessed = [];
-      this.correct_spaces = 0;
-      this.init();
-    }
+     function getRandomIntInclusive(min, max) {
+          min = Math.ceil(min);
+          max = Math.floor(max);
+          return Math.floor(Math.random() * (max - min + 1)) + min; //The maximum is inclusive and the minimum is inclusive
+        }
 
-    GameObject.prototype.displayMessage = function(message) {
-      $message.text(message);
-    }
+        var randomWord = (function() {
+          var wordArray = ['stipend', 'glamor', 'pencil', 'arbiter'];
 
-    GameObject.prototype.checkWord = function() {
-      if (!this.word) {
-        this.displayMessage("Sorry, we've run out of words!");
-        return false
-      } else {
-        this.displayMessage("Game on");
-        return true;
+          return function() {
+            var randomIdx = getRandomIntInclusive(0, wordArray.length - 1);
+            var result = wordArray[randomIdx];
+            wordArray.splice(randomIdx, 1);
+
+            return result;
+          }
+        })()
+
+      var GameObject = (function() {
+        function init(string) {
+          if (wordPresent(string)) {
+            createBlanks(string);
+          }
+        }
+
+        function wordPresent(string) {
+           if (string) {
+            $message.text("May the odds be ever in your favor...");
+            return true;
+          } else {
+            $message.text("Sorry, we've run out of words! Too lazy to add more right now..");
+            return false
+          }
+        };
+
+        function createBlanks(string) {
+          var length = string.split('').length + 1;
+          var spaces = new Array(length).join('<span></span>');
+          $letters.find('span').remove();
+          $letters.append(spaces);
+        }
+
+        return function() {
+          this.word = randomWord();
+          this.incorrectGuesses = 0;
+          this.totalAllowedIncorrects = 6;
+          this.lettersGuessed = [];
+          this.correct_spaces = 0;
+          init(this.word);
+        }
+      })();
+
+      var GameEngine = function() {
+        this.game;
+        this.resetGame();
+        this.resetBinding();
+      };
+
+      GameEngine.prototype.resetGame = function() {
+        this.game = new GameObject;
+        $body.removeClass();
+        $apples.removeClass();
+        $replay.hide();
+        $guesses.find('span').remove();
       }
-    }
 
-
-    GameObject.prototype.createBlanks = function() {
-      var length = this.word.split('').length + 1;
-      var spaces = new Array(length).join('<span></span>');
-      $letters.find('span').remove();
-      $letters.append(spaces);
-    }
-
-
-    GameObject.prototype.init = function() {
-      if (this.checkWord()) {
-        this.createBlanks();
+      GameEngine.prototype.resetBinding = function() {
+        var self = this;
+        $(document).on('keypress', self.processResponse.bind(this));
       }
-    }
 
-    var gameInstance = new GameObject();
-
-    (function() {
-      resetBinding();
-    })();
-
-    function resetBinding() {
-      $(document).on('keypress', function(e) {
+      GameEngine.prototype.processResponse = function(e) {
         e.preventDefault();
+
         var key = e.key;
         var valid = key.match(/[a-z]/gi);
-        var newKey = !gameInstance.lettersGuessed.includes(key);
-        var conditions;
+        var newKey = !this.game.lettersGuessed.includes(key);
+        var gameStatus;
 
         if (valid && newKey) {
-          var matches = findMatches(key);
-          handleResult(matches);
-          conditions = returnGameProgress();
-          endGame(conditions);
+          var matches = this.findMatches(key);
+          this.handleMatches(matches);
+          gameStatus = this.returnGameProgress();
+          this.endGame(gameStatus);
         }
+      }
+
+      GameEngine.prototype.findMatches = function(char) {
+        var regex = new RegExp(char, 'g');
+        var word = this.game.word;
+        var myArray;
+        var result = [];
+
+        this.trackKey(char)
+
+        while ((myArray = regex.exec(word)) !== null) {
+          result.push(regex.lastIndex - 1);
+        }
+
+        this.updateStatus(result.length);
+
+        return result;
+      }
+
+      GameEngine.prototype.trackKey = function(key) {
+        this.game.lettersGuessed.push(key);
+        $guesses.append("<span>" + key + "</span");
+      }
+
+      GameEngine.prototype.updateStatus = function(number) {
+        this.game.correct_spaces += number;
+      }
+
+      GameEngine.prototype.handleMatches = function(matches) {
+        var array = this.game.lettersGuessed;
+        var mostRecentChar = array[array.length - 1];
+
+        if (matches.length > 0) {
+          matches.forEach(function(idx){
+            $letters.find('span').get(idx).textContent = mostRecentChar;
+          })
+        } else {
+          this.handleMismatch();
+        }
+      }
+
+      GameEngine.prototype.handleMismatch = function() {
+        this.game.incorrectGuesses++
+        this.removeApples(this.game.incorrectGuesses);
+      }
+
+      GameEngine.prototype.removeApples = function(number) {
+        $apples.addClass('guess_' + number);
+      }
+
+      GameEngine.prototype.returnGameProgress = function() {
+        var win = (this.game.word.length === this.game.correct_spaces)? 'win' : null;
+        var lose = (this.game.incorrectGuesses === 6)? 'lose' : null;
+        var condition = (win || lose)
+
+        return condition;
+      }
+
+      GameEngine.prototype.endGame = function(status) {
+        var message;
+        var condition;
+
+        if (status === 'win') {
+          message = 'You got lucky';
+        } else if (status === 'lose') {
+          message = 'Sadness...';
+        }
+
+        $body.addClass(status);
+        $message.text(message);
+        this.unbindKeyPress(status);
+        $replay.toggle(!!status);
+      }
+
+      GameEngine.prototype.unbindKeyPress = function(trigger) {
+        if (trigger) {
+          $(document).off('keypress');
+        }
+      }
+
+      var engine = new GameEngine;
+
+      $replay.on('click', function(e) {
+        e.preventDefault();
+
+        engine.resetGame();
+        engine.resetBinding();
       })
-    }
 
-    function createNewGame() {
-      gameInstance = new GameObject;
-      $body.removeClass();
-      $replay.hide();
-      $guesses.find('span').remove();
-    }
-
-    $replay.on('click', function(e) {
-      createNewGame()
-      resetBinding();
-    })
   </script>
 </html>
